Upgrade to java 19 and enable preview features