@@ -24,6 +24,17 @@ publishing {
 sourceCompatibility = '19'
 targetCompatibility = '19'
 
+compileJava {
+    options.compilerArgs.addAll(['--release', '19']) 
+    options.compilerArgs.addAll(['--enable-preview'])
+    options.compilerArgs.addAll(['--add-modules', 'jdk.incubator.concurrent'])
+}
+
+application {
+    applicationDefaultJvmArgs = ['--enable-preview', 
+                                 '--add-modules', 'jdk.incubator.concurrent']
+}
+
 repositories {
 	mavenLocal()
 	mavenCentral()
